PLUGINWIZARD-90 : Create/Modify Object in XPages bugs fixed
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@66065 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_alternative.html
@@ -103,6 +103,7 @@ public class ${business_class.businessClass}XPage extends MVCApplication
     @View( value = VIEW_MANAGE_${business_class.businessClass?upper_case}S, defaultView = true )
     public XPage getManage${business_class.businessClass}s( HttpServletRequest request )
     {
+        _${business_class.businessClass?lower_case} = null;
         Map<String, Object> model = getModel(  );
         model.put( MARK_${business_class.businessClass?upper_case}_LIST, ${business_class.businessClass?cap_first}Home.get${business_class.businessClass?cap_first}sList(  ) );
 
@@ -144,7 +145,6 @@ public class ${business_class.businessClass}XPage extends MVCApplication
         }
 
         ${business_class.businessClass}Home.create( _${business_class.businessClass?lower_case} );
-        _${business_class.businessClass?lower_case} = null;
         addInfo( INFO_${business_class.businessClass?upper_case}_CREATED, getLocale( request ) );
 
         return redirectView( request, VIEW_MANAGE_${business_class.businessClass?upper_case}S );
@@ -197,7 +197,7 @@ public class ${business_class.businessClass}XPage extends MVCApplication
     {
         int nId = Integer.parseInt( request.getParameter( PARAMETER_ID_${business_class.businessClass?upper_case} ) );
 
-        if ( _${business_class.businessClass?lower_case} == null )
+        if ( _${business_class.businessClass?lower_case} == null  || ( _${business_class.businessClass?lower_case}.get${business_class.primaryKeyName}(  ) != nId ))
         {
             _${business_class.businessClass?lower_case} = ${business_class.businessClass}Home.findByPrimaryKey( nId );
         }
@@ -226,7 +226,6 @@ public class ${business_class.businessClass}XPage extends MVCApplication
         }
 
         ${business_class.businessClass}Home.update( _${business_class.businessClass?lower_case} );
-        _${business_class.businessClass?lower_case} = null;
         addInfo( INFO_${business_class.businessClass?upper_case}_UPDATED, getLocale( request ) );
 
         return redirectView( request, VIEW_MANAGE_${business_class.businessClass?upper_case}S );
