--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_admin_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_admin_alternative.html
@@ -71,12 +71,7 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
 
 
     // Parameters
-<#list business_class.attributes as attribute>
-    <#if attribute.isPrimary >
-    private static final String PARAMETER_ID_${business_class.businessClass?upper_case}="${attribute.paramName}";
-    </#if>
-</#list>
-
+    private static final String PARAMETER_ID_${business_class.businessClass?upper_case}="id";
 
     // Properties for page titles
     private static final String PROPERTY_PAGE_TITLE_MANAGE_${business_class.businessClass?upper_case}S = "${plugin_model.pluginName?lower_case}.manage_${business_class.businessClass?lower_case}s.pageTitle";
@@ -228,7 +223,7 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
     {
         int nId = Integer.parseInt( request.getParameter( PARAMETER_ID_${business_class.businessClass?upper_case} ) );
 
-        if ( _${business_class.businessClass?lower_case} == null || ( _${business_class.businessClass?lower_case}.get${business_class.primaryKeyName}(  ) != nId ))
+        if ( _${business_class.businessClass?lower_case} == null || ( _${business_class.businessClass?lower_case}.getId(  ) != nId ))
         {
             _${business_class.businessClass?lower_case} = ${business_class.businessClass}Home.findByPrimaryKey( nId );
         }
@@ -253,7 +248,7 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
         // Check constraints
         if ( !validateBean( _${business_class.businessClass?lower_case}, VALIDATION_ATTRIBUTES_PREFIX ) )
         {
-            return redirect( request, VIEW_MODIFY_${business_class.businessClass?upper_case}, PARAMETER_ID_${business_class.businessClass?upper_case}, _${business_class.businessClass?lower_case}.get${business_class.primaryKeyName}(  ) );
+            return redirect( request, VIEW_MODIFY_${business_class.businessClass?upper_case}, PARAMETER_ID_${business_class.businessClass?upper_case}, _${business_class.businessClass?lower_case}.getId( ) );
         }
 
         ${business_class.businessClass}Home.update( _${business_class.businessClass?lower_case} );
