--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xml_pom_file_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xml_pom_file_alternative.html
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
-        <artifactId>lutece-plugins-pom</artifactId>
-        <groupId>fr.paris.lutece.plugins</groupId>
-        <version>${pom_parent_version}</version>
+        <artifactId>lutece-global-pom</artifactId>
+        <groupId>fr.paris.lutece.tools</groupId>
+        <version>3.0</version>
     </parent>
 
     <modelVersion>${pom_model_version}</modelVersion>
@@ -26,14 +26,14 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[4.4.0,)</version>
+            <version>[5.0.0,)</version>
             <type>lutece-core</type>
         </dependency>
         <#if plugin.getRest().getIdBusinessClasses()?? && plugin.getRest().getIdBusinessClasses()?size &gt; 0 >
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-rest</artifactId>
-            <version>[2.1.0,)</version>
+            <version>[3.0.0,)</version>
             <type>lutece-plugin</type>
         </dependency>
         </#if>
