--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_template_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_template_alternative.html
@@ -13,11 +13,8 @@
             <legend>${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</legend>
 
             <${macro}messages errors=errors />
-
+            <input type="hidden" id="id" name="id"/>  
             <#list business_class.attributes as attribute>
-            <#if attribute.attributeName = business_class.primaryKey>
-            <input type="hidden" id="${attribute.paramName}" name="${attribute.paramName}"  />
-            <#else>
             <div class="form-group">
                 <label class="col-sm-3 control-label" for="${attribute.paramName}" >${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close} * :</label>
                 <div class="col-sm-9">
@@ -25,7 +22,6 @@
                     <span class="help-block">${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}</span>
                 </div>
             </div>
-            </#if>
             </#list>
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
@@ -55,20 +51,14 @@
             <legend>${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</legend>
 
             <${macro}messages errors=errors />
-
+            <input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
             <#list business_class.attributes as attribute>
-            <#if attribute.attributeName = business_class.primaryKey>
-
-            <input type="hidden" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}"/>
-            <#else>
-
             <div class="form-group">
                 <label class="col-sm-3 control-label" for="${attribute.paramName}" >${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close} * :</label>
                 <div class="col-sm-9">
                     <input class="form-control" type="text" id="${attribute.paramName}" name="${attribute.paramName}" <#if attribute.maxLength &gt; 0> maxlength="${attribute.maxLength}"</#if> value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}" tabindex="1" />
                 </div>
             </div>
-            </#if>
             </#list>
 
 
@@ -110,39 +100,27 @@
         
     <table class="table table-condensed table-striped">
         <tr>
+            <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
-                <#if attribute.attributeName = business_class.primaryKey>
-                    <input type="hidden" id="${attribute.paramName}" name="${attribute.paramName}"  />
-                <#else>
-                    <th>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}</th>
-                </#if>
+            <th>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}</th>
             </#list>
             <th>${i18n_open}portal.util.labelActions${i18n_close}</th>
         </tr>
             <${variable}list ${business_class.businessClass?lower_case}_list as ${business_class.businessClass?lower_case} >
         <tr>
+            <input type="hidden" id="id" name="id" />
             <#list business_class.attributes as attribute>
-                <#if attribute.attributeName = business_class.primaryKey>
-                    <input type="hidden" id="${attribute.paramName}" name="${attribute.paramName}"  />
-                <#else>
-                    <#if attribute.attributeName = business_class.classDescription>
-                        <td>
-                            ${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
-                        </td>
-                    <#else>
-                        <td>
-                            ${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
-                        </td>
-                    </#if>
-                </#if>                
+            <td>
+                ${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
+            </td>    
         </#list>
         <td>
-            <a href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}&view=modify${business_class.businessClass}&${business_class.primaryKey}=${bra_open}${business_class.businessClass?lower_case?lower_case}.${business_class.primaryKeyName?uncap_first}${bra_close}"
+            <a href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}&view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
                class="btn btn-primary btn-small" title="${i18n_open}portal.util.labelModify${i18n_close}">
                 <span class="glyphicon glyphicon-edit"></span>
             </a>
 
-            <a href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}&action=confirmRemove${business_class.businessClass}&${business_class.primaryKey}=${bra_open}${business_class.businessClass?lower_case?lower_case}.${business_class.primaryKeyName?uncap_first}${bra_close}"
+            <a href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}&action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
                class="btn btn-danger btn-small" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
                 <span class="glyphicon glyphicon-trash"></span>
             </a>
