--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_business_dao_classic.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_business_dao_classic.html
@@ -41,149 +41,160 @@ import fr.paris.lutece.util.sql.DAOUtil;
 import java.util.ArrayList;
 import java.util.Collection;
 
-
 /**
  * This class provides Data Access methods for ${business_class.businessClass} objects
  */
 
 public final class ${business_class.businessClass}DAO implements I${business_class.businessClass}DAO
 {
-	
-	// Constants
-	private static final String SQL_QUERY_NEW_PK = "SELECT max( ${business_class.primaryKey} ) FROM ${business_class.businessTableName}";
-	private static final String SQL_QUERY_SELECT = "SELECT <#list business_class.attributes as attribute>${attribute.attributeName}<#if attribute_has_next>, </#if></#list> FROM ${business_class.businessTableName} WHERE ${business_class.primaryKey} = ?";
-	private static final String SQL_QUERY_INSERT = "INSERT INTO ${business_class.businessTableName} ( <#list business_class.attributes as attribute>${attribute.attributeName}<#if attribute_has_next>, </#if></#list> ) VALUES ( <#list business_class.attributes as attribute>?<#if attribute_has_next>, </#if></#list> ) ";
-	private static final String SQL_QUERY_DELETE = "DELETE FROM ${business_class.businessTableName} WHERE ${business_class.primaryKey} = ? ";
-	private static final String SQL_QUERY_UPDATE = "UPDATE ${business_class.businessTableName} SET <#list business_class.attributes as attribute>${attribute.attributeName} = ?<#if attribute_has_next>, </#if></#list> WHERE ${business_class.primaryKey} = ?";
-	private static final String SQL_QUERY_SELECTALL = "SELECT <#list business_class.attributes as attribute>${attribute.attributeName}<#if attribute_has_next>, </#if></#list> FROM ${business_class.businessTableName}";
+    // Constants
+    private static final String SQL_QUERY_NEW_PK = "SELECT max( ${business_class.primaryKey} ) FROM ${business_class.businessTableName}";
+    private static final String SQL_QUERY_SELECT = "SELECT ${business_class.primaryKey}<#if business_class.attributes??>, <#list business_class.attributes as attribute>${attribute.attributeName}<#if attribute_has_next>, </#if></#list></#if> FROM ${business_class.businessTableName} WHERE ${business_class.primaryKey} = ?";
+    private static final String SQL_QUERY_INSERT = "INSERT INTO ${business_class.businessTableName} ( ${business_class.primaryKey}<#if business_class.attributes??>, <#list business_class.attributes as attribute>${attribute.attributeName}<#if attribute_has_next>, </#if></#list></#if> ) VALUES ( ?<#if business_class.attributes??>, <#list business_class.attributes as attribute>?<#if attribute_has_next>, </#if></#list></#if> ) ";
+    private static final String SQL_QUERY_DELETE = "DELETE FROM ${business_class.businessTableName} WHERE ${business_class.primaryKey} = ? ";
+    private static final String SQL_QUERY_UPDATE = "UPDATE ${business_class.businessTableName} SET ${business_class.primaryKey} = ?<#if business_class.attributes??>, <#list business_class.attributes as attribute>${attribute.attributeName} = ?<#if attribute_has_next>, </#if></#list></#if> WHERE ${business_class.primaryKey} = ?";
+    private static final String SQL_QUERY_SELECTALL = "SELECT ${business_class.primaryKey}<#if business_class.attributes??>, <#list business_class.attributes as attribute>${attribute.attributeName}<#if attribute_has_next>, </#if></#list></#if> FROM ${business_class.businessTableName}";
+    private static final String SQL_QUERY_SELECTALL_ID = "SELECT ${business_class.primaryKey} FROM ${business_class.businessTableName}";
 
+    /**
+     * Generates a new primary key
+     * @param plugin The Plugin
+     * @return The new primary key
+     */
+    public int newPrimaryKey( Plugin plugin)
+    {
+        DAOUtil daoUtil = new DAOUtil( SQL_QUERY_NEW_PK , plugin  );
+        daoUtil.executeQuery( );
 
-	
-	/**
-	 * Generates a new primary key
-	 * @param plugin The Plugin
-	 * @return The new primary key
-	 */
-	public int newPrimaryKey( Plugin plugin)
-	{
-		DAOUtil daoUtil = new DAOUtil( SQL_QUERY_NEW_PK , plugin  );
-		daoUtil.executeQuery( );
+        int nKey = 1;
 
-		int nKey = 1;
+        if( daoUtil.next( ) )
+        {
+                nKey = daoUtil.getInt( 1 ) + 1;
+        }
 
-		if( daoUtil.next( ) )
-		{
-			nKey = daoUtil.getInt( 1 ) + 1;
-		}
+        daoUtil.free();
 
-		daoUtil.free();
+        return nKey;
+    }
 
-		return nKey;
-	}
+    /**
+     * {@inheritDoc }
+     */
+    @Override
+    public void insert( ${business_class.businessClass} ${business_class.instanceName}, Plugin plugin )
+    {
+        DAOUtil daoUtil = new DAOUtil( SQL_QUERY_INSERT, plugin );
 
+        ${business_class.instanceName}.setId( newPrimaryKey( plugin ) );
 
+        daoUtil.setInt( 1, ${business_class.instanceName}.getId( ) );
+        <#list business_class.attributes as attribute>
+        daoUtil.set${attribute.type?cap_first}( ${attribute_index + 2}, ${business_class.instanceName}.get${attribute.name}( ) );
+        </#list>
 
+        daoUtil.executeUpdate( );
+        daoUtil.free( );
+    }
 
-	/**
-	 * {@inheritDoc }
-	 */
-	@Override
-	public void insert( ${business_class.businessClass} ${business_class.instanceName}, Plugin plugin )
-	{
-		DAOUtil daoUtil = new DAOUtil( SQL_QUERY_INSERT, plugin );
-				
-		${business_class.instanceName}.set${business_class.primaryKeyName?cap_first}( newPrimaryKey( plugin ) );
-				
-		<#list business_class.attributes as attribute>
-		daoUtil.set${attribute.type?cap_first}( ${attribute_index + 1}, ${business_class.instanceName}.get${attribute.name}( ) );
-		</#list>
+    /**
+     * {@inheritDoc }
+     */
+    @Override
+    public ${business_class.businessClass} load( int nKey, Plugin plugin )
+    {
+        DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECT, plugin );
+        daoUtil.setInt( 1 , nKey );
+        daoUtil.executeQuery( );
 
-		daoUtil.executeUpdate( );
-		daoUtil.free( );
-	}
+        ${business_class.businessClass} ${business_class.instanceName} = null;
 
+        if ( daoUtil.next( ) )
+        {
+            ${business_class.instanceName} = new ${business_class.businessClass}();
+            ${business_class.instanceName}.setId( daoUtil.getInt( 1 ) );
+            <#list business_class.attributes as attribute>
+            ${business_class.instanceName}.set${attribute.name}( daoUtil.get${attribute.type?cap_first}( ${attribute_index + 2} ) );
+            </#list>
+        }
 
-	/**
-	 * {@inheritDoc }
-	 */
-	@Override
-	public ${business_class.businessClass} load( int nKey, Plugin plugin )
-	{
-		DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECT, plugin );
-		daoUtil.setInt( 1 , nKey );
-		daoUtil.executeQuery( );
+        daoUtil.free( );
+        return ${business_class.instanceName};
+    }
 
-		${business_class.businessClass} ${business_class.instanceName} = null;
+    /**
+     * {@inheritDoc }
+     */
+    @Override
+    public void delete( int nKey, Plugin plugin )
+    {
+        DAOUtil daoUtil = new DAOUtil( SQL_QUERY_DELETE, plugin );
+        daoUtil.setInt( 1 , nKey );
+        daoUtil.executeUpdate( );
+        daoUtil.free( );
+    }
 
-		if ( daoUtil.next( ) )
-		{
-			${business_class.instanceName} = new ${business_class.businessClass}();
-			<#list business_class.attributes as attribute>
-			${business_class.instanceName}.set${attribute.name}( daoUtil.get${attribute.type?cap_first}(  ${attribute_index + 1} ) );
-			</#list>
-		}
+    /**
+     * {@inheritDoc }
+     */
+    @Override
+    public void store( ${business_class.businessClass} ${business_class.instanceName}, Plugin plugin )
+    {
+        DAOUtil daoUtil = new DAOUtil( SQL_QUERY_UPDATE, plugin );
+        
+        daoUtil.setInt( 1, ${business_class.instanceName}.getId( ) );
+        <#list business_class.attributes as attribute>
+        <#assign nIndex=attribute_index+2 >
+        daoUtil.set${attribute.type?cap_first}( ${nIndex}, ${business_class.instanceName}.get${attribute.name}( ) );
+        </#list>
+        daoUtil.setInt( ${nIndex+1}, ${business_class.instanceName}.getId( ) );
 
-		daoUtil.free( );
-		return ${business_class.instanceName};
-	}
+        daoUtil.executeUpdate( );
+        daoUtil.free( );
+    }
 
+    /**
+     * {@inheritDoc }
+     */
+    @Override
+    public Collection&lt;${business_class.businessClass}&gt; select${business_class.businessClass}sList( Plugin plugin )
+    {
+        Collection&lt;${business_class.businessClass}&gt; ${business_class.instanceName}List = new ArrayList&lt;${business_class.businessClass}&gt;(  );
+        DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECTALL, plugin );
+        daoUtil.executeQuery(  );
 
-	/**
-	 * {@inheritDoc }
-	 */
-	@Override
-	public void delete( int n${business_class.businessClass}Id, Plugin plugin )
-	{
-		DAOUtil daoUtil = new DAOUtil( SQL_QUERY_DELETE, plugin );
-		daoUtil.setInt( 1 , n${business_class.businessClass}Id );
-		daoUtil.executeUpdate( );
-		daoUtil.free( );
-	}
+        while ( daoUtil.next(  ) )
+        {
+            ${business_class.businessClass} ${business_class.instanceName} = new ${business_class.businessClass}(  );
+            
+            ${business_class.instanceName}.setId( daoUtil.getInt( 1 ) );
+            <#list business_class.attributes as attribute>
+                ${business_class.instanceName}.set${attribute.name}( daoUtil.get${attribute.type?cap_first}( ${attribute_index+2} ) );
+            </#list>
 
+            ${business_class.instanceName}List.add( ${business_class.instanceName} );
+        }
 
-	/**
-	 * {@inheritDoc }
-	 */
-	@Override
-	public void store( ${business_class.businessClass} ${business_class.instanceName}, Plugin plugin )
-	{
-		DAOUtil daoUtil = new DAOUtil( SQL_QUERY_UPDATE, plugin );
-				
-		<#list business_class.attributes as attribute>
-		<#assign nIndex=attribute_index+1 >
-		daoUtil.set${attribute.type?cap_first}( ${nIndex}, ${business_class.instanceName}.get${attribute.name}( ) );
-		</#list>
-		daoUtil.setInt( ${nIndex+1}, ${business_class.instanceName}.get${business_class.primaryKeyName?cap_first}( ) );
-				
-		daoUtil.executeUpdate( );
-		daoUtil.free( );
-	}
+        daoUtil.free( );
+        return ${business_class.instanceName}List;
+    }
+    
+    /**
+     * {@inheritDoc }
+     */
+    @Override
+    public Collection&lt;Integer&gt; selectId${business_class.businessClass}sList( Plugin plugin )
+    {
+            Collection&lt;Integer&gt; ${business_class.instanceName}List = new ArrayList&lt;Integer&gt;( );
+            DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECTALL_ID, plugin );
+            daoUtil.executeQuery(  );
 
+            while ( daoUtil.next(  ) )
+            {
+                ${business_class.instanceName}List.add( daoUtil.getInt( 1 ) );
+            }
 
-
-	/**
-	 * {@inheritDoc }
-	 */
-	@Override
-	public Collection&lt;${business_class.businessClass}&gt; select${business_class.businessClass}sList( Plugin plugin )
-	{
-		Collection&lt;${business_class.businessClass}&gt; ${business_class.instanceName}List = new ArrayList&lt;${business_class.businessClass}&gt;(  );
-		DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECTALL, plugin );
-		daoUtil.executeQuery(  );
-
-		while ( daoUtil.next(  ) )
-		{
-				${business_class.businessClass} ${business_class.instanceName} = new ${business_class.businessClass}(  );
-
-				<#list business_class.attributes as attribute>
-					${business_class.instanceName}.set${attribute.name}( daoUtil.get${attribute.type?cap_first}( ${attribute_index+1} ) );
-				</#list>
-
-				${business_class.instanceName}List.add( ${business_class.instanceName} );
-		}
-
-		daoUtil.free( );
-		return ${business_class.instanceName}List;
-	}
-
+            daoUtil.free( );
+            return ${business_class.instanceName}List;
+    }
 }
