--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_xpage_template_classic.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_xpage_template_classic.html
@@ -13,11 +13,8 @@
             <legend>${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</legend>
 
             <${macro}messages errors=errors />
-
+            <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
-            <#if attribute.attributeName = business_class.primaryKey>
-            <input type="hidden" id="${attribute.paramName}" name="${attribute.paramName}"  />
-            <#else>
             <div class="control-group">
                 <label class="control-label" for="${attribute.paramName}" >${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close} * :</label>
                 <div class="controls">
@@ -25,7 +22,6 @@
                     <span class="help-block">${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}</span>
                 </div>
             </div>
-            </#if>
             </#list>
             <div class="form-actions">
                 <button name="action_create${business_class.businessClass}" class="btn btn-primary" type="submit" tabindex="${business_class.attributes?size}">
@@ -55,22 +51,15 @@
             <legend>${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</legend>
 
             <${macro}messages errors=errors />
-
+            <input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
             <#list business_class.attributes as attribute>
-            <#if attribute.attributeName = business_class.primaryKey>
-
-            <input type="hidden" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}"/>
-            <#else>
-
             <div class="control-group">
                 <label class="control-label" for="${attribute.paramName}" >${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close} * :</label>
                 <div class="controls">
                     <input type="text" id="${attribute.paramName}" name="${attribute.paramName}" maxlength="${attribute.maxLength}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}" tabindex="1" />
                 </div>
             </div>
-            </#if>
             </#list>
-
 
             <div class="form-actions">   
                 <button name="action_modify${business_class.businessClass}" class="btn btn-primary" type="submit" tabindex="${business_class.attributes?size}" >
@@ -110,39 +99,27 @@
         
     <table class="table table-condensed table-striped">
         <tr>
+            <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
-                <#if attribute.attributeName = business_class.primaryKey>
-                    <input type="hidden" id="${attribute.paramName}" name="${attribute.paramName}"  />
-                <#else>
-                    <th>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}</th>
-                </#if>
+            <th>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}</th>
             </#list>
             <th>${i18n_open}portal.util.labelActions${i18n_close}</th>
         </tr>
             <${variable}list ${business_class.businessClass?lower_case}_list as ${business_class.businessClass?lower_case} >
         <tr>
+            <input type="hidden" id="id" name="id"  />
             <#list business_class.attributes as attribute>
-                <#if attribute.attributeName = business_class.primaryKey>
-                    <input type="hidden" id="${attribute.paramName}" name="${attribute.paramName}"  />
-                <#else>
-                    <#if attribute.attributeName = business_class.classDescription>
-                        <td>
-                            ${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
-                        </td>
-                    <#else>
-                        <td>
-                            ${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
-                        </td>
-                    </#if>
-                </#if>                
+            <td>
+                ${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
+            </td>
         </#list>
         <td>
-            <a href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}?view=modify${business_class.businessClass}&${business_class.primaryKey}=${bra_open}${business_class.businessClass?lower_case?lower_case}.${business_class.primaryKeyName?uncap_first}${bra_close}"
+            <a href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
                class="btn btn-primary btn-small" title="${i18n_open}portal.util.labelModify${i18n_close}">
                 <i class="icon-edit icon-white"></i>
             </a>
 
-            <a href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}?action=confirmRemove${business_class.businessClass}&${business_class.primaryKey}=${bra_open}${business_class.businessClass?lower_case?lower_case}.${business_class.primaryKeyName?uncap_first}${bra_close}"
+            <a href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
                class="btn btn-danger btn-small" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
                 <i class="icon-trash icon-white"></i>
             </a>
