--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_html_admin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_html_admin.html
@@ -12,11 +12,8 @@
         <fieldset>
             <legend>${i18n_open}${plugin_name?lower_case}.create_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</legend>
 
-
+            <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
-            <#if attribute.attributeName = business_class.primaryKey>
-            <input type="hidden" id="${attribute.paramName}" name="${attribute.paramName}"  />
-            <#else>
             <div class="control-group">
                 <label class="control-label" for="${attribute.paramName}" >${i18n_open}${plugin_name?lower_case}.create_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close} * :</label>
                 <div class="controls">
@@ -24,7 +21,6 @@
                     <span class="help-block">${i18n_open}${plugin_name?lower_case}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}</span>
                 </div>
             </div>
-            </#if>
             </#list>
             <div class="form-actions">
                 <input class="btn btn-primary" type="submit" value="${i18n_open}portal.util.labelCreate${i18n_close}" tabindex="${business_class.attributes?size}" />
@@ -50,13 +46,9 @@
     <form class="form-horizontal" method="post"  name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name?lower_case}/DoModify${business_class.businessClass?cap_first}.jsp">
         <fieldset>
             <legend>${i18n_open}${plugin_name?lower_case}.modify_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</legend>
-
+            
+            <input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
             <#list business_class.attributes as attribute>
-            <#if attribute.attributeName = business_class.primaryKey>
-
-            <input type="hidden" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}"/>
-            <#else>
-
             <div class="control-group">
                 <label class="control-label" for="${attribute.paramName}" >${i18n_open}${plugin_name?lower_case}.modify_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close} * :</label>
                 <div class="controls">
@@ -64,9 +56,7 @@
                     <span class="help-block">${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}</span>
                 </div>
             </div>
-            </#if>
             </#list>
-
 
             <div class="form-actions">   
                 <input class="btn btn-primary" type="submit" value="${i18n_open}portal.util.labelModify${i18n_close}" tabindex="3" />
@@ -102,39 +92,27 @@
     
     <table class="table table-condensed table-striped">
         <tr>
+            <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
-                <#if attribute.attributeName = business_class.primaryKey>
-                    <input type="hidden" id="${attribute.paramName}" name="${attribute.paramName}"  />
-                <#else>
-                    <th>${i18n_open}${plugin_name?lower_case}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}</th>
-                </#if>
+            <th>${i18n_open}${plugin_name?lower_case}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}</th>
             </#list>
             <th>${i18n_open}portal.util.labelActions${i18n_close}</th>
         </tr>
             <${variable}list ${business_class.businessClass?lower_case}_list as ${business_class.businessClass?lower_case} >
         <tr>
+            <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
-                <#if attribute.attributeName = business_class.primaryKey>
-                    <input type="hidden" id="${attribute.paramName}" name="${attribute.paramName}"  />
-                <#else>
-                    <#if attribute.attributeName = business_class.classDescription>
-                        <td>
-                            ${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
-                        </td>
-                    <#else>
-                        <td>
-                            ${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
-                        </td>
-                    </#if>
-                </#if>                
-        </#list>
+            <td>
+                ${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}
+            </td>
+            </#list>
         <td>
-            <a href="jsp/admin/plugins/${plugin_name?lower_case}/Modify${business_class.businessClass?cap_first}.jsp?${business_class.primaryKey}=${bra_open}${business_class.businessClass?lower_case?lower_case}.${business_class.primaryKeyName?uncap_first}${bra_close}"
+            <a href="jsp/admin/plugins/${plugin_name?lower_case}/Modify${business_class.businessClass?cap_first}.jsp?id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
                class="btn btn-primary btn-small" title="${i18n_open}portal.util.labelModify${i18n_close}">
                 <i class="icon-edit icon-white"></i>
             </a>
 
-            <a href="jsp/admin/plugins/${plugin_name?lower_case}/Remove${business_class.businessClass?cap_first}.jsp?${business_class.primaryKey}=${bra_open}${business_class.businessClass?lower_case?lower_case}.${business_class.primaryKeyName?uncap_first}${bra_close}"
+            <a href="jsp/admin/plugins/${plugin_name?lower_case}/Remove${business_class.businessClass?cap_first}.jsp?id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
                class="btn btn-danger btn-small" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
                 <i class="icon-trash icon-white"></i>
             </a>
