--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_sql_db.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_sql_db.html
@@ -42,7 +42,7 @@ PRIMARY KEY (${business_class.primaryKey})
 --
 -- Data for table core_admin_right
 --
-DELETE FROM core_admin_right WHERE id_right = 'UPDATER_MANAGEMENT';
+DELETE FROM core_admin_right WHERE id_right = '${feature.featureRight}';
 INSERT INTO core_admin_right (id_right,name,level_right,admin_url,description,is_updatable,plugin_name,id_feature_group,icon_url,documentation_url, id_order ) VALUES 
 ('${feature.featureRight}','${plugin.pluginName}.adminFeature.${feature.featureName}.name',1,'jsp/admin/plugins/${plugin.pluginName}/${feature.jspName}','${plugin.pluginName}.adminFeature.${feature.featureName}.description',0,'${plugin.pluginName}',NULL,NULL,NULL,4);
 
